# optimize-examples

./: Cargo.toml  README.md
examples/: chunked_slice.rs  cpu-scalable.rs  false-sharing.rs  object-reuse.rs  vec-init.rs  vector-vs-hashmap.rs
src/: lib.rs
