[package]
name    = "optimize-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam       = "0.8.4"
crossbeam-utils = "0.8.19"
jemalloc-ctl    = "0.3.2"
jemallocator    = "0.3.2"
threadpool      = "1.8.1"
